[gd_scene load_steps=2 format=3 uid="uid://d8xvhqxqxqxqx"]

[ext_resource type="Script" path="res://scripts/ui/lobby_screen.gd" id="1_2h8qx"]

[node name="LobbyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2h8qx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_1")

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48
font_color = Color(1, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="ServerAddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server Address:"

[node name="ServerAddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -50.0
text = "Ready to host or join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 150.0
offset_right = -50.0
offset_bottom = 400.0

[node name="PlayerListLabel" type="Label" parent="PlayerList"]
layout_mode = 2
text = "Players:"
horizontal_alignment = 1 